tests/NormalTests/paczka1/fuzzy1/75891687.err
Error in line 2: ttxcEO1 S499 70,1
Error in line 16: U9DHWjxA SB34 5B,8
Error in line 11: APYZJh S499 46,6
Error in line 8: U9DHWjxA S134 86,3
